--- a/css/login.css
+++ b/css/login.css
@@ -105,7 +105,7 @@ body{
 
 main{
     width: 100%;
-    padding: 20px;
+    padding: 150px;
     margin: auto;
     margin-top: 100px;
 }
@@ -131,6 +131,10 @@ main{
     margin: 100px 40px;
     color: var(--black);
     transition: all 500ms;
+}
+
+.caja__trasera div p{
+    font-size: 15px;
 }
 
 .caja__trasera div p,
@@ -168,11 +172,10 @@ main{
     width: 100%;
     max-width: 380px;
     position: relative;
-    top: -185px;
+    top: -205px;
     left: 10px;
     transition: left 500ms cubic-bezier(0.175, 0.885, 0,320, 1.275);
 }
-
 
 .contenedor__login-register form{
     width: 100%;
